update fe_page and css fix for dark mode

--- a/src/Resources/public/scss/color_schemes/nature_dark_mode.scss
+++ b/src/Resources/public/scss/color_schemes/nature_dark_mode.scss
@@ -475,4 +475,10 @@ $darkMode_input-focus-border-color: $grey-darker;
     }
   }
 
+  @media screen and (min-width: 1024px) {
+    .color-scheme-dark-mode .navbar-dropdown.level_3 {
+      background: $black-ter;
+    }
+  }
+
 }
